--- a/buss_pas.html
+++ b/buss_pas.html
@@ -29,8 +29,8 @@
                     #1871ff 100%
                     /* Light pink at the bottom */
                 );
-            width: 105px;
-            height: 105px;
+            width: 120px;
+            height: 115px;
             font-size: 19px;
             align-items: center;
             position :relative;
@@ -86,10 +86,12 @@
             height: 140px;
         }
         .top-text{
-            margin-top: -6px;
+            margin-top: -5px;
+            font-size:21px;
         }
         .top-text1{
             margin-top: 5px;
+            font-size:21px;
         }
         .twoZones{
             border-radius: 10px;
