--- a/buss_pas.html
+++ b/buss_pas.html
@@ -29,8 +29,8 @@
                     #1871ff 100%
                     /* Light pink at the bottom */
                 );
-            width: 120px;
-            height: 115px;
+            width: 130px;
+            height: 120px;
             font-size: 19px;
             align-items: center;
             position :relative;
@@ -46,7 +46,7 @@
     width: 100%;
     height: 20px;
     position: relative;
-    top:5px;
+    top:13px;
     background: linear-gradient(to right,
             #af748a 0%, #af748a 33.33%,
             #4f9c82 33.33%, #4f9c82 66.66%,
@@ -56,7 +56,7 @@
         .red-heading{
             color: red;
             font-size: 24px;
-            margin-top: 35px;
+            margin-top: 50px;
         }
 
        @keyframes blink {
@@ -73,25 +73,25 @@
             margin-top: 15px;
             font-weight: 500;
             position: relative;
-            top:14px;
+            top:28px;
         }
         .countdown{
             font-size: 13px;
             font-weight: 500;
             position:relative;
-            top:5px;
+            top:7px;
         }
         .image{
             margin-top:-7px;
             height: 140px;
         }
         .top-text{
-            margin-top: -5px;
-            font-size:21px;
+            margin-top: -11px;
+            font-size:23px;
         }
         .top-text1{
-            margin-top: 5px;
-            font-size:21px;
+            margin-top: 8px;
+            font-size:23px;
         }
         .twoZones{
             border-radius: 10px;
@@ -128,7 +128,7 @@
         }
         .bottom{
             position: fixed;
-            bottom:0;
+            bottom:-2px;
         }
     </style>
 </head>
